--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -40,12 +40,13 @@ body {
     flex-direction: column;
     width: 75vw;
     height: 100vh;
-    position:absolute;
-    left:-100vw;
+    position: absolute;
+    left: -100vw;
     transition: .25s
 }
-.menu-lateral--ativo{
-    left:0;
+
+.menu-lateral--ativo {
+    left: 0;
     transition: .25s
 }
 
@@ -63,11 +64,12 @@ body {
     padding-left: 64px;
 }
 
-.menu-lateral__link:hover{
-    color:#ffffff;
-    padding-left:56px;
-    border-left:8px solid #ffffff;
+.menu-lateral__link:hover {
+    color: #ffffff;
+    padding-left: 56px;
+    border-left: 8px solid #ffffff;
 }
+
 .menu-lateral__link::before {
     content: "";
     font-size: 24px;
@@ -76,27 +78,100 @@ body {
     position: absolute;
     width: 24px;
 }
-.menu-lateral__link--inicio::before{
-    content:"\e902";
-}
-.menu-lateral__link--videos::before{
-    content:"\e90e";
-}
-.menu-lateral__link--picos::before{
-    content:"\e909";
-}
-.menu-lateral__link--integrantes::before{
-    content:"\e903";
-}
-.menu-lateral__link--camisas::before{
-    content:"\e900";
-}
-.menu-lateral__link--pinturas::before{
-    content:"\e90a";
+
+.menu-lateral__link--inicio::before {
+    content: "\e902";
 }
 
+.menu-lateral__link--videos::before {
+    content: "\e90e";
+}
 
+.menu-lateral__link--picos::before {
+    content: "\e909";
+}
+
+.menu-lateral__link--integrantes::before {
+    content: "\e903";
+}
+
+.menu-lateral__link--camisas::before {
+    content: "\e900";
+}
+
+.menu-lateral__link--pinturas::before {
+    content: "\e90a";
+}
 
 .menu-lateral__link:hover {
     color: #FFFFFF;
+}
+
+/* MAIN */
+.principal {
+    padding: 24px 16px
+}
+
+.titulo-pagina {
+    font-size: 1.5rem;
+    font-weight: 700;
+}
+
+/* ESTRUTURA BÁSICA DO CARTÃO */
+.cartao {
+    width: 100%;
+    border-radius: 15px;
+    /*Qualquer cooisa que ultrapasse a borda desejamos esconder*/
+    overflow: hidden;
+    background-color: #2C343A;
+}
+
+.cartao__conteudo {
+    padding: 16px;
+    display:grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.cartao__titulo {
+    font-size: 1.3rem;
+    font-weight: 700;
+}
+
+.cartao__perfil {
+    color: #95999C;
+    font-size: 0.9rem;
+}
+
+.cartao__info {
+    display: flex;
+    align-items: center;
+    color: #95999C;
+}
+.cartao__info--tempo{
+    content:"\e90c";
+    margin-right: 8px;
+}
+.cartao__info--vizualizacao{
+    content:"\e90f";
+    margin-right: 8px;
+}
+.cartao__botao{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #0480DC;
+    width: 40px;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 0.9rem;
+}
+.cartao__botao--play::before{
+    content:"\e90b";
+    font-size: 24px;
+}
+.cartao__botao--destaque{
+    width: 100%;
+}
+cartao__botao--destaque::before{
+    margin-right: 8px;
 }
