--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -109,7 +109,9 @@ body {
 
 /* MAIN */
 .principal {
-    padding: 24px 16px
+    display:grid;
+    padding: 24px 16px;
+    gap: 16px;
 }
 
 .titulo-pagina {
@@ -119,51 +121,60 @@ body {
 
 /* ESTRUTURA BÁSICA DO CARTÃO */
 .cartao {
-    width: 100%;
-    border-radius: 15px;
     /*Qualquer cooisa que ultrapasse a borda desejamos esconder*/
-    overflow: hidden;
     background-color: #2C343A;
+    border-radius: 15px;
+    overflow: hidden;
+    width: 100%;
 }
-
+.cartao--destaque{
+    margin-bottom: 16px;
+}
 .cartao__conteudo {
-    padding: 16px;
     display:grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: auto 1fr;
+    padding: 16px;
+    gap: 8px;
 }
 
 .cartao__titulo {
     font-size: 1.3rem;
     font-weight: 700;
+    grid-column: span 2;  
 }
 
+.cartao__destaque{
+  grid-column: span 2;  
+}
 .cartao__perfil {
     color: #95999C;
     font-size: 0.9rem;
+    grid-column: span 2;  
 }
 
 .cartao__info {
-    display: flex;
     align-items: center;
     color: #95999C;
+    display: flex;
 }
-.cartao__info--tempo{
+.cartao__info--tempo::before{
     content:"\e90c";
     margin-right: 8px;
 }
-.cartao__info--vizualizacao{
+.cartao__info--vizualizacao::before{
     content:"\e90f";
     margin-right: 8px;
 }
 .cartao__botao{
-    display: flex;
-    justify-content: center;
     align-items: center;
     background-color: #0480DC;
-    width: 40px;
-    height: 40px;
     border-radius: 10px;
+    display: flex;
     font-size: 0.9rem;
+    justify-self: flex-end;
+    justify-content: center;
+    height: 40px;
+    width: 40px;
 }
 .cartao__botao--play::before{
     content:"\e90b";
@@ -171,7 +182,17 @@ body {
 }
 .cartao__botao--destaque{
     width: 100%;
+    grid-column: span 2;  
 }
-cartao__botao--destaque::before{
+.cartao__botao--destaque::before{
     margin-right: 8px;
+}
+/* SEÇÃO */
+.secao{
+    display:grid;
+    gap:16px;
+}
+secao__titulo{
+    font-size:1.2rem;
+    font-weight:700;
 }
